---
config:
  layout: elk
---
erDiagram
    USERS ||--o{ REVIEW : writes
    PRODUCT ||--o{ REVIEW : receives
    USERS ||--o| CART : owns
    CART ||--o{ CART_ITEM : contains
    PRODUCT ||--o{ CART_ITEM : includes
    USERS ||--o{ ORDERS : places
    ORDERS ||--o{ ORDER_ITEM : contains
    PRODUCT ||--o{ ORDER_ITEM : includes

    USERS {
        int user_id PK
        varchar username UK
        varchar email UK
        varchar password
        varchar role
    }

    PRODUCT {
        int product_id PK
        varchar name
        text description
        decimal price
        varchar unit
        varchar image
        int discount
        boolean available
        varchar brand
        varchar category
        double rating
    }

    REVIEW {
        int review_id PK
        int user_id FK
        int product_id FK
        int rating
        text comment
    }

    CART {
        int cart_id PK
        int user_id FK "unique"
    }

    CART_ITEM {
        int cart_item_id PK
        int cart_id FK "unique with product_id"
        int product_id FK "unique with cart_id"
        int quantity
    }

    ORDERS {
        int order_id PK
        int user_id FK
        varchar order_status
        decimal total_price
    }

    ORDER_ITEM {
        int order_item_id PK
        int order_id FK
        int product_id FK
        int quantity
    }
